clusters/vps/production/policies/templates/require-probes.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8srequireprobes
spec:
  crd:
    spec:
      names:
        kind: K8sRequireProbes
      validation:
        openAPIV3Schema:
          type: object
          properties:
            probes:
              type: array
              items:
                type: string
                enum:
                - readinessProbe
                - livenessProbe
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8srequireprobes

        violation[{"msg": msg}] {
          container := input.review.object.spec.template.spec.containers[_]
          probe := input.parameters.probes[_]
          not container[probe]
          msg := sprintf("Container %v is missing %v", [container.name, probe])
        }
